Working on fixing header alignment

--- a/src/ShareModules/Layout/Header/Header.scss
+++ b/src/ShareModules/Layout/Header/Header.scss
@@ -22,8 +22,8 @@
     border-bottom: none;
     width: 48px;
     height: 32px;
-    margin-bottom: 5px;
     text-align: center;
+    margin-bottom: -10px;
   }
 
   .navbar {
@@ -255,6 +255,9 @@
     font-size: 15px;
     line-height: 20px;
     text-decoration: none;
+    margin-top: 15px;
+    height: 32px;
+    align-items: center;
     a {
       @media (max-width: 960) {
         font-size: 13px;
